--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -8,9 +8,6 @@
 	comment = Mint Samba Server
 	registry shares = No
 	hosts allow = 127. 192.168.0. 192.168.4. 192.168.14. 192.168.15. 192.168.43. 10.233.
-;	remote announce = 10.255.255.255 192.168.15.255
-;	interfaces = 127.0.0.1/8 192.168.15.1/24 192.168.150.105/24
-;	interfaces = 127.0.0.1/8 192.168.0.145/24
 	interfaces = lo, wlan0, eth0
 	bind interfaces only = Yes
 	config backend = file
@@ -33,7 +30,6 @@
 	passwd chat = *New*password* %n\n *ReType*new*password* %n\n *passwd*changed*\n
 	passwd chat timeout = 120
 	username map = /etc/samba/usermap.cfg
-;	username level = 6
 	invalid users = daemon,bin,sys,sync,games,man,lp,mail,news,uucp,proxy,backup,list,irc,gnats,syslog,uuid,ntp,avahi,pulse,mdm,sand,bind,postgres,mysql,sshd,posfix,mpd,hplip,colord
 	unix password sync = Yes
 ;	restrict anonymous = 1
@@ -47,8 +43,6 @@
 ;	kerberos method = default
 ;	map untrusted to domain = No
 	log level = 3
-;	syslog = 1
-;	syslog only = No
 	log file = /var/log/samba/%m.log
 	max log size = 10000
 	timestamp logs = Yes
@@ -80,17 +74,10 @@
 	time server = yes
 	unix extensions = Yes
 ;	use spnego = Yes
-;	client signing = default
-;	server signing = default
+	client signing = auto
+;	server signing = mandatory
 ;	client use spnego = default
-;	cldap port = 389
-;	dgram port = 138
-;	nbt port = 137
-;	krb5 port = 88
-;	kpasswd port = 464
-;	web port = 901
-;	rpc big endian = No
-;	deadtime = 0
+	deadtime = 30
 	getwd cache = Yes
 	keepalive = 300
 	change notify = Yes
@@ -102,7 +89,6 @@
 	use mmap = Yes
 	hostname lookups = No
 	name cache timeout = 660
-;	clustering = No
 	ctdb timeout = No
 	ctdb locktime warn threshold = 0
 ;	smb2 max read = 8388608
@@ -138,7 +124,6 @@
 	state directory = /var/lib/samba
 	cache directory = /var/cache/samba
 	pid directory = /var/run/samba
-;	utmp = No
 ;	nbt client socket address = 0.0.0.0
 ;	socket address = 0.0.0.0
 ;	nmbd bind explicit broadcast = Yes
@@ -168,14 +153,14 @@
 	directory mode = 0755
 	inherit permissions = No
 	inherit acls = No
-	inherit owner = yes
+	inherit owner = No
 	guest ok = Yes
 	allocation roundup size = 1048576
 	ea support = No
 	nt acl support = No
 	profile acls = No
 	afs share = No
-;	smb encrypt = default
+	smb encrypt = auto
 ;	durable handles = Yes
 	block size = 4096
 	directory name cache size = 100
@@ -198,7 +183,7 @@
 	load printers = Yes
 	max print jobs = 10
 	printcap cache time = 750
-	cups encrypt = No
+	cups encrypt = auto
 	cups connection timeout = 30
 	disable spoolss = No
 	show add printer wizard = Yes
@@ -276,7 +261,7 @@
 	browseable = Yes
 	read only = Yes
 	guest ok = Yes
-;	valid users = bjohnston, Movies
+	write list = bjohnston
 	force user = bjohnston
 	force group = audio
 
@@ -286,7 +271,7 @@
 	browseable = Yes
 	read only = Yes
 	guest ok = Yes
-;	valid users = bjohnston, Music
+	write list = bjohnston
 	force user = bjohnston
 	force group = audio
 
@@ -315,16 +300,22 @@
 	force group = bjohnston
 	force user = bjohnston
 
-[netlogon]
-	comment = Network Logon Service
+[windows]
+	browseable = true
+	read only = yes
+	guest ok = yes
+	path = /var/lib/tftboot/windows
+
+;[netlogon]
+;	comment = Network Logon Service
 	path = /var/lib/samba/netlogon
 
-[profiles]
-	comment = User Profiles
-	path = /var/lib/samba/profiles
-	read only = No
-	create mask = 0600
-	directory mask = 0700
+;[profiles]
+;	comment = User Profiles
+;	path = /var/lib/samba/profiles
+;	read only = No
+;	create mask = 0600
+;	directory mask = 0700
 
 [printers]
 	comment = All Printers
@@ -344,8 +335,8 @@
 	guest ok = yes
 	write list = @lpadmin, root
 
-[IPC$]
-	hosts allow = 192.168.0.0/24 127.0.0.1
+;[IPC$]
+;	hosts allow = 192.168.0.0/24 127.0.0.1
 
 ;[pdf-documents]
 ;	comment = Converted PDF Documents
