--- a/apache2/sites-available/kodi-webserver.conf
+++ b/apache2/sites-available/kodi-webserver.conf
@@ -1,13 +1,15 @@
-#Kodi configuration, replace kodiserver with the actual server name.
-DocumentRoot /
-LogLevel emerg
-ErrorLog /var/log/apache2/kodiserver_error.log
-CustomLog /var/log/apache2/kodiserver_access.log "vhost_combined"
-ProxyPass "/" "http://192.168.0.100:8888/"
-ProxyPassReverse "/" "http://192.168.0.100:8888/"
-<Directory "/">
-	allow from all
-	Options +Indexes
-</Directory>
-ServerName reliant
-AllowEncodedSlashes On
+<VirtualHost kodi:80>
+	#Kodi configuration, replace kodiserver with the actual server name.
+	ServerName		kodi
+	AllowEncodedSlashes	On
+	DocumentRoot		/
+	LogLevel		emerg
+	ProxyPass		"/" "http://192.168.15.1:8888/"
+	ProxyPassReverse	"/" "http://192.168.15.1:8888/"
+	ErrorLog		${APACHE_LOG_DIR}/kodiserver_error.log
+	CustomLog		${APACHE_LOG_DIR}/kodiserver_access.log combined
+	<Directory "/">
+		allow from all
+		Options +Indexes
+	</Directory>
+</VirtualHost>
