--- a/mdm/mdm.conf
+++ b/mdm/mdm.conf
@@ -50,6 +50,12 @@
 
 Greeter=/usr/lib/mdm/mdmwebkit
 
+TimedLoginEnable=true
+
+TimedLogin=guest
+
+TimedLoginDelay=100
+
 [security]
 
 [xdmcp]
@@ -58,11 +64,15 @@ Greeter=/usr/lib/mdm/mdmwebkit
 
 [greeter]
 
-HTMLTheme=Synergy
+HTMLTheme=MDModern
 
 GraphicalTheme=Sea
 
 Use24Clock=false
+
+DefaultWelcome=false
+
+Welcome=Go Away!!!
 
 [chooser]
 
