--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -156,12 +156,12 @@ follow_inside_symlinks			"yes"
 # If this setting is set to "yes", service information will be published with
 # Zeroconf / Avahi.
 #
-zeroconf_enabled			"no"
+zeroconf_enabled			"yes"
 #
 # The argument to this setting will be the Zeroconf / Avahi unique name for
 # this MPD server on the network.
 #
-#zeroconf_name				"MPD Music Player"
+zeroconf_name				"MPD Music Player"
 #
 ###############################################################################
 
