--- a/wicd/wireless-settings.conf
+++ b/wicd/wireless-settings.conf
@@ -57,6 +57,9 @@ afterscript = None
 predisconnectscript = None
 postdisconnectscript = None
 
+[00:1D:D5:70:E1:90]
+never = 1
+
 [00:22:6B:56:F8:E8]
 afterscript = None
 dhcphostname = reliant
@@ -204,10 +207,10 @@ dhcphostname = reliant
 usedhcphostname = False
 bssid = 00:71:C2:CA:97:4A
 encryption = False
-never = 0
+never = 1
 use_settings_globally = False
 use_static_dns = False
-automatic = 1
+automatic = 0
 predisconnectscript = None
 essid = xfinitywifi
 postdisconnectscript = None
@@ -264,6 +267,7 @@ beforescript = None
 hidden = False
 channel = 1
 mode = Master
+never = 0
 netmask = None
 usedhcphostname = 0
 predisconnectscript = None
@@ -299,15 +303,15 @@ mode = Master
 afterscript = None
 bssid = 0E:51:A4:1D:6F:E4
 encryption = False
+use_global_dns = False
 use_settings_globally = False
 use_static_dns = False
 automatic = 1
-predisconnectscript = None
 essid = xfinitywifi
 postdisconnectscript = None
 beforescript = None
 hidden = False
-use_global_dns = False
+predisconnectscript = None
 channel = 6
 mode = Master
 
@@ -333,19 +337,19 @@ mode = Master
 afterscript = None
 dhcphostname = reliant
 bssid = 14:91:82:F6:2B:1F
-ip = None
+postdisconnectscript = None
 dns_domain = None
 gateway = None
-use_global_dns = False
+use_global_dns = 0
 encryption = True
-postdisconnectscript = None
+ip = None
 beforescript = None
 hidden = False
 channel = 10
 mode = Master
 never = 0
 netmask = None
-usedhcphostname = 0
+usedhcphostname = 1
 predisconnectscript = None
 bitrate = auto
 enctype = wpa-psk
@@ -353,8 +357,8 @@ allow_lower_bitrates = 0
 dns3 = None
 dns2 = None
 dns1 = None
-use_settings_globally = False
-use_static_dns = False
+use_settings_globally = 0
+use_static_dns = 0
 apsk = 12121212
 encryption_method = WPA2
 essid = Lct4vets
@@ -630,6 +634,23 @@ use_static_dns = False
 automatic = 1
 predisconnectscript = None
 essid = xfinitywifi
+postdisconnectscript = None
+beforescript = None
+hidden = False
+use_global_dns = False
+channel = 1
+mode = Master
+
+[60:31:97:BF:9C:72]
+afterscript = None
+bssid = 60:31:97:BF:9C:72
+encryption = True
+use_settings_globally = False
+use_static_dns = False
+automatic = 1
+predisconnectscript = None
+encryption_method = WPA2
+essid = CenturyLink4299
 postdisconnectscript = None
 beforescript = None
 hidden = False
@@ -917,12 +938,12 @@ mode = Master
 afterscript = None
 dhcphostname = reliant
 bssid = 90:B6:86:2B:58:04
-postdisconnectscript = None
+ip = None
 dns_domain = None
 gateway = None
 use_global_dns = False
 encryption = True
-ip = None
+postdisconnectscript = None
 beforescript = None
 hidden = False
 channel = 11
@@ -938,9 +959,9 @@ dns2 = None
 dns1 = None
 use_settings_globally = False
 use_static_dns = False
-apsk = letmeinnow
+apsk = letmeinnow2
 encryption_method = WPA2
-essid = UDP Crue
+essid = `'`UDP Crue `'`
 automatic = 1
 search_domain = None
 
