--- a/apache2/mods-available/info.conf
+++ b/apache2/mods-available/info.conf
@@ -7,7 +7,8 @@
 	<Location /server-info>
 		SetHandler server-info
 		Require local
-		#Require ip 192.0.2.0/24
+		Require ip 192.168.15.0/24
+		Require ip 192.168.0.0/24
 	</Location>
 
 </IfModule>
