--- a/apache2/mods-available/status.conf
+++ b/apache2/mods-available/status.conf
@@ -6,7 +6,8 @@
 	<Location /server-status>
 		SetHandler server-status
 		Require local
-		#Require ip 192.0.2.0/24
+		Require ip 192.168.15.0/24
+		Require ip 192.168.0.0/24
 	</Location>
 
 	# Keep track of extended status information for each request
