--- a/avahi/avahi-daemon.conf
+++ b/avahi/avahi-daemon.conf
@@ -23,18 +23,18 @@ host-name=reliant
 domain-name=local
 browse-domains=0pointer.de, zeroconf.org
 use-ipv4=yes
-use-ipv6=yes
-allow-interfaces=lo eth0 wlan0
-#deny-interfaces=eth1
+use-ipv6=no
+allow-interfaces=eth0
+deny-interfaces=wlan0
 #check-response-ttl=no
 #use-iff-running=no
 enable-dbus=yes
-disallow-other-stacks=no
+#disallow-other-stacks=no
 #allow-point-to-point=no
-cache-entries-max=4096
-clients-max=4096
-objects-per-client-max=1024
-entries-per-entry-group-max=32
+#cache-entries-max=4096
+#clients-max=4096
+#objects-per-client-max=1024
+#entries-per-entry-group-max=32
 ratelimit-interval-usec=1000000
 ratelimit-burst=1000
 
@@ -44,14 +44,15 @@ enable-wide-area=yes
 [publish]
 disable-publishing=no
 disable-user-service-publishing=no
-add-service-cookie=no
+#add-service-cookie=no
 publish-addresses=yes
 publish-hinfo=yes
 publish-workstation=yes
 publish-domain=yes
-publish-dns-servers=8.8.8.8, 8.8.4.4
-publish-resolv-conf-dns-servers=yes
-#publish-aaaa-on-ipv4=yes
+#publish-dns-servers=yes
+publish-dns-servers=192.168.15.1, 8.8.8.8
+#publish-resolv-conf-dns-servers=yes
+publish-aaaa-on-ipv4=yes
 #publish-a-on-ipv6=no
 
 [reflector]
