--- a/mysql/mysql.conf.d/mysqld.cnf
+++ b/mysql/mysql.conf.d/mysqld.cnf
@@ -37,6 +37,7 @@ datadir		= /var/lib/mysql
 tmpdir		= /tmp
 lc-messages-dir	= /usr/share/mysql
 skip-external-locking
+sql-mode	= "STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION" 
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
