--- a/nsswitch.conf
+++ b/nsswitch.conf
@@ -9,7 +9,7 @@ group:          compat
 shadow:         compat
 gshadow:        files
 
-hosts:          files dns
+hosts:          files mdns4_minimal [NOTFOUND=return] dns
 networks:       files
 
 protocols:      db files
