--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -7,7 +7,7 @@
 	server string = Samba %v on %h
 	comment = Mint Samba Server
 	registry shares = No
-	hosts allow = 127. 192.168.0. 192.168.4. 192.168.14. 192.168.15. 192.168.43. 10.233.
+	hosts allow = 127. 192.168.0. 192.168.4. 192.168.144. 192.168.15. 192.168.43. 10.233.
 	interfaces = lo, wlan0, eth0
 	bind interfaces only = Yes
 	config backend = file
@@ -293,7 +293,7 @@
 
 [Public]
 	comment = B's public storage space
-	path = /home/bjohnston/Publc
+	path = /home/bjohnston/Public
 	browseable = Yes
 	writable = Yes
 	guest ok = Yes
@@ -301,10 +301,10 @@
 	force user = bjohnston
 
 [windows]
-	browseable = true
+	path = /var/lib/tftboot/windows
+	browseable = yes
 	read only = yes
 	guest ok = yes
-	path = /var/lib/tftboot/windows
 
 ;[netlogon]
 ;	comment = Network Logon Service
