--- a/sysctl.conf
+++ b/sysctl.conf
@@ -46,7 +46,7 @@ net.ipv6.conf.all.accept_redirects = 0
 # _or_
 # Accept ICMP redirects only for gateways listed in our default
 # gateway list (enabled by default)
-net.ipv4.conf.all.secure_redirects = 1
+net.ipv4.conf.all.secure_redirects = 0
 
 # Do not send ICMP redirects (we are not a router)
 net.ipv4.conf.all.send_redirects = 0
@@ -64,22 +64,22 @@ kernel.shmmax = 2147483648
 kernel.shmmni = 4096
 fs.file-max = 65536
 fs.suid_dumpable = 0
-vm.swappiness = 80
+vm.swappiness = 90
 vm.vfs_cache_pressure = 50
 vm.overcommit_memory = 0
 vm.min_free_kbytes = 65536
-net.core.netdev_max_backlog = 2500
 #net.core.rmem_default = 524288
 #net.core.wmem_default = 524288
-net.core.rmem_max = 1677721600
-net.core.rmem_default = 167772160
-net.core.wmem_max = 1677721600
-net.core.wmem_default = 167772160
-net.core.optmem_max = 2048000
-net.ipv4.tcp_rmem = 1024000 8738000 1677721600
-net.ipv4.tcp_wmem = 1024000 8738000 1677721600
-net.ipv4.tcp_mem = 1024000 8738000 1677721600
-net.ipv4.udp_mem = 1024000 8738000 1677721600
+net.core.rmem_max = 16777216
+net.core.rmem_default = 16777216
+net.ipv4.tcp_slow_start_after_idle = 0
+net.core.wmem_max = 16777216
+net.core.wmem_default = 16777216
+net.core.optmem_max = 40960
+net.ipv4.tcp_rmem = 8192 87380 16777216
+net.ipv4.tcp_wmem = 8192 65536 16777216
+#net.ipv4.tcp_mem = 1024000 8738000 16777216
+#net.ipv4.udp_mem = 1024000 8738000 16777216
 #net.ipv4.tcp_rmem = 4096 87380 16777216
 #net.ipv4.tcp_wmem = 4096 65536 16777216
 #net.ipv4.tcp_mem = 524288 524288 524288
@@ -98,4 +98,10 @@ net.ipv4.tcp_frto = 1
 #net.ipv4.tcp_frto_response = 1
 net.ipv4.tcp_congestion_control = illinois
 net.ipv4.route.flush = 1
-net.ipv4.tcp_max_syn_backlog = 4096
+net.core.netdev_max_backlog = 50000
+net.ipv4.tcp_max_syn_backlog = 30000
+net.ipv4.tcp_max_tw_buckets = 2000000
+net.ipv4.tcp_tw_reuse = 1
+net.ipv4.tcp_fin_timeout = 10
+net.ipv4.udp_rmem_min = 8192
+net.ipv4.udp_wmem_min = 8192
