--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -19,7 +19,7 @@
 	encrypt passwords = yes
 	client schannel = Auto
 	server schannel = Auto
-;	allow trusted domains = Yes
+	allow trusted domains = Yes
 	password server = *
 	smb passwd file = /etc/samba/smbpasswd
 	private dir = /var/lib/samba/private
@@ -39,7 +39,6 @@
 	client NTLMv2 auth = yes
 	client lanman auth = No
 	client plaintext auth = No
-;	client use spnego principal = Yes
 ;	kerberos method = default
 ;	map untrusted to domain = No
 	log level = 3
@@ -49,6 +48,7 @@
 	debug timestamp = Yes
 	enable core files = No
 	smb ports = 445 139
+	min receivefile size = 16384
 	large readwrite = Yes
 	server max protocol = SMB3
 	max protocol = SMB3
@@ -65,7 +65,7 @@
 	defer sharing violations = Yes
 	nt pipe support = Yes
 	nt status support = Yes
-;	max mux = 50
+	max mux = 50
 	max xmit = 16644
 	name resolve order = lmhosts wins host bcast
 	max ttl = 259200
@@ -73,28 +73,29 @@
 	min wins ttl = 21600
 	time server = yes
 	unix extensions = Yes
-;	use spnego = Yes
 	client signing = auto
 ;	server signing = mandatory
+;	client use spnego principal = Yes
 ;	client use spnego = default
+;	use spnego = Yes
 	deadtime = 30
 	getwd cache = Yes
-	keepalive = 300
+	keepalive = 180
 	change notify = Yes
 	kernel change notify = Yes
-;	max smbd processes = 0
-;	max disk size = 0
-;	max open files = 16384
+	max smbd processes = 0
+	max disk size = 0
+	max open files = 16384
 	socket options = IPTOS_LOWDELAY TCP_NODELAY
 	use mmap = Yes
 	hostname lookups = No
 	name cache timeout = 660
 	ctdb timeout = No
 	ctdb locktime warn threshold = 0
-;	smb2 max read = 8388608
-;	smb2 max write = 8388608
-;	smb2 max trans = 8388608
-;	smb2 max credits = 8192
+	smb2 max read = 8388608
+	smb2 max write = 8388608
+	smb2 max trans = 8388608
+	smb2 max credits = 8192
 	mangling method = hash2
 	mangle prefix = 1
 	max stat cache size = 256
@@ -117,7 +118,7 @@
 	dns proxy = No
 	wins proxy = No
 	wins support = yes
-;	smb2 leases = No
+	smb2 leases = Yes
 	lock spin time = 200
 	oplock break wait time = 0
 	lock directory = /var/run/samba
@@ -144,7 +145,7 @@
 	template homedir = /home/%U
 	template shell = /bin/false
 ;	allow dcerpc auth level connect = No
-;	spotlight = No
+	spotlight = No
 	idmap config * : backend = tdb
 	read only = No
 	create mask = 0755
@@ -155,16 +156,17 @@
 	inherit acls = No
 	inherit owner = No
 	guest ok = Yes
-	allocation roundup size = 1048576
 	ea support = No
 	nt acl support = No
 	profile acls = No
 	afs share = No
 	smb encrypt = auto
-;	durable handles = Yes
+	durable handles = Yes
 	block size = 4096
 	directory name cache size = 100
-	strict allocate = No
+;	allocation roundup size = 1048576
+	allocation roundup size = 4096
+	strict allocate = Yes
 	strict rename = No
 	strict sync = No
 	sync always = No
@@ -205,10 +207,10 @@
 	add user to group script = /usr/sbin/useradd -d /dev/null -c 'Samba User Account' -s /dev/null -g '%g' '%u'
 	delete user from group script = /usr/sbin/userdel '%u' '%g'
 	add machine script = /usr/sbin/useradd -d /dev/null -g sambamachines -c 'Samba Machine Account' -s /dev/null -M '%u'
-;	require strong key = Yes
+	require strong key = Yes
 	rndc command = /usr/sbin/rndc
-	aio read size = 0
-	aio write size = 0
+	aio read size = 16384
+	aio write size = 16384
 	default case = lower
 	case sensitive = Auto
 	preserve case = Yes
@@ -219,12 +221,12 @@
 	hide unreadable = No
 	hide unwriteable files = No
 	delete veto files = No
-	map archive = Yes
+	map archive = No
 	map hidden = No
 	map system = No
-	map readonly = Yes
+	map readonly = No
 	mangled names = Yes
-	store dos attributes = No
+	store dos attributes = Yes
 	browseable = No
 	blocking locks = Yes
 	fake oplocks = No
