--- a/sysctl.conf
+++ b/sysctl.conf
@@ -70,6 +70,7 @@ vm.overcommit_memory = 0
 vm.min_free_kbytes = 65536
 #net.core.rmem_default = 524288
 #net.core.wmem_default = 524288
+net.core.default_qdisc = fq
 net.core.rmem_max = 16777216
 net.core.rmem_default = 16777216
 net.ipv4.tcp_slow_start_after_idle = 0
@@ -96,7 +97,7 @@ net.ipv4.tcp_low_latency = 1
 net.ipv4.tcp_mtu_probing = 1
 net.ipv4.tcp_frto = 1
 #net.ipv4.tcp_frto_response = 1
-net.ipv4.tcp_congestion_control = illinois
+net.ipv4.tcp_congestion_control = bbr
 net.ipv4.route.flush = 1
 net.core.netdev_max_backlog = 50000
 net.ipv4.tcp_max_syn_backlog = 30000
