--- a/apache2/sites-available/kodi-webserver.conf
+++ b/apache2/sites-available/kodi-webserver.conf
@@ -4,10 +4,10 @@
 	AllowEncodedSlashes	On
 	DocumentRoot		/
 	LogLevel		emerg
-	ProxyPass		"/" "http://192.168.15.1:8888/"
-	ProxyPassReverse	"/" "http://192.168.15.1:8888/"
 	ErrorLog		${APACHE_LOG_DIR}/kodiserver_error.log
 	CustomLog		${APACHE_LOG_DIR}/kodiserver_access.log combined
+	ProxyPass		/	http://192.168.15.1:8888/
+	ProxyPassReverse	/	http://192.168.15.1:8888/
 	<Directory "/">
 		allow from all
 		Options +Indexes
