changes in /etc

--- a/init/control-alt-delete.conf
+++ b/init/control-alt-delete.conf
@@ -10,4 +10,5 @@ start on control-alt-delete
 
 task
 exec /usr/bin/logger -p security.info "Control-Alt-Delete pressed"
-exec shutdown -r now "Control-Alt-Delete pressed"
+#exec shutdown -r now "Control-Alt-Delete pressed"
+exec echo "DISABLED: "Control-Alt-Delete pressed""
