--- a/modprobe.d/ath9k.conf
+++ b/modprobe.d/ath9k.conf
@@ -1,1 +1,1 @@
-options ath9k nohwcrypt=1 btcoex_enable=1 bt_ant_diversity=0
+options ath9k nohwcrypt=1 bt_ant_diversity=1 ps_enable=0 use_chanctx=0
