--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -7,8 +7,8 @@
 	server string = Samba %v on %h
 	comment = Mint Samba Server
 	registry shares = No
-	hosts allow = 127. 192.168.0. 192.168.4. 192.168.144. 192.168.15. 192.168.43. 10.233.
-	interfaces = lo, wlan0, eth0
+	hosts allow = 127. 192.168.0. 192.168.144. 192.168.15. 192.168.43.
+	interfaces = lo, eth0
 	bind interfaces only = Yes
 	config backend = file
 	server role = standalone server
@@ -33,15 +33,15 @@
 	invalid users = daemon,bin,sys,sync,games,man,lp,mail,news,uucp,proxy,backup,list,irc,gnats,syslog,uuid,ntp,avahi,pulse,mdm,sand,bind,postgres,mysql,sshd,posfix,mpd,hplip,colord
 	unix password sync = Yes
 ;	restrict anonymous = 1
-	lanman auth = No
-	ntlm auth = Yes
-	raw NTLMv2 auth = No
-	client NTLMv2 auth = yes
-	client lanman auth = No
-	client plaintext auth = No
+;	lanman auth = No
+;	ntlm auth = Yes
+;	raw NTLMv2 auth = Yes
+;	client NTLMv2 auth = yes
+;	client lanman auth = No
+;	client plaintext auth = No
 ;	kerberos method = default
 ;	map untrusted to domain = No
-	log level = 3
+	log level = 4
 	log file = /var/log/samba/%m.log
 	max log size = 10000
 	timestamp logs = Yes
@@ -50,9 +50,9 @@
 	smb ports = 445 139
 	min receivefile size = 16384
 	large readwrite = Yes
-	server max protocol = SMB3
-	max protocol = SMB3
-	protocol = SMB3
+;	server max protocol = SMB2
+	max protocol = SMB2
+;	protocol = SMB2
 ;	server min protocol = SMB2
 ;	min protocol = SMB2
 ;	client max protocol = SMB3
@@ -278,16 +278,16 @@
 	force group = audio
 
 [Videos]
-	comment = 'Videos'.
-	path = /media/bjohnston/Acer/Users/bjohnston/Pr0n
+	comment = More 'Videos'.
+	path = /home/bjohnston/Pr0n
 	browseable = No
 	read only = Yes
 	guest ok = No
 	valid users = bjohnston
 
 [Videos2]
-	comment = More 'Videos'.
-	path = /home/bjohnston/Pr0n
+	comment = 'Videos'.
+	path = /media/bjohnston/Acer/Users/bjohnston/Pr0n
 	browseable = No
 	read only = Yes
 	guest ok = No
@@ -310,7 +310,7 @@
 
 ;[netlogon]
 ;	comment = Network Logon Service
-	path = /var/lib/samba/netlogon
+;	path = /var/lib/samba/netlogon
 
 ;[profiles]
 ;	comment = User Profiles
@@ -336,27 +336,3 @@
 	force group = lpadmin
 	guest ok = yes
 	write list = @lpadmin, root
-
-;[IPC$]
-;	hosts allow = 192.168.0.0/24 127.0.0.1
-
-;[pdf-documents]
-;	comment = Converted PDF Documents
-;	path = /var/lib/samba/pdf-documents
-;	browsable = yes
-;	admin users = %U
-;	read only = No
-;	guest ok = Yes
-;	locking = No
-;	strict locking = No
-
-;[pdf-printer]
-;	comment = PDF Printer Service
-;	path = /tmp
-;	browsable = yes
-;	guest ok = Yes
-;	printable = Yes
-;	printing = bsd
-;	print command = /usr/bin/gadmin-samba-pdf %s %u
-;	lpq command = 
-;	use client driver = Yes
