--- a/apache2/apache2.conf
+++ b/apache2/apache2.conf
@@ -162,7 +162,7 @@ Include ports.conf
 </Directory>
 
 <Directory /var/www/>
-	Options Indexes FollowSymLinks
+	Options Indexes FollowSymLinks Includes
 	AllowOverride None
 	Require all granted
 </Directory>
